packages/@aws-cdk-containers/ecs-service-extensions/test/imported-environment.integ.snapshot/imported-environment-integ.template.json
{
 "Resources": {
  "ResourcesNestedStackResourcesNestedStackResourceCDA26E60": {
   "Type": "AWS::CloudFormation::Stack",
   "Properties": {
    "TemplateURL": {
     "Fn::Join": [
      "",
      [
       "https://s3.",
       {
        "Ref": "AWS::Region"
       },
       ".",
       {
        "Ref": "AWS::URLSuffix"
       },
       "/",
       {
        "Ref": "AssetParameters78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01S3Bucket64585C1B"
       },
       "/",
       {
        "Fn::Select": [
         0,
         {
          "Fn::Split": [
           "||",
           {
            "Ref": "AssetParameters78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01S3VersionKey41670582"
           }
          ]
         }
        ]
       },
       {
        "Fn::Select": [
         1,
         {
          "Fn::Split": [
           "||",
           {
            "Ref": "AssetParameters78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01S3VersionKey41670582"
           }
          ]
         }
        ]
       }
      ]
     ]
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "ServiceloadbalancerD5D60894": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "ServiceloadbalancerSecurityGroup2DA3E8D6",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Fn::GetAtt": [
       "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
       "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcPublicSubnet1Subnet0D15D382Ref"
      ]
     },
     {
      "Fn::GetAtt": [
       "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
       "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcPublicSubnet2Subnet68645ACARef"
      ]
     }
    ],
    "Type": "application"
   }
  },
  "ServiceloadbalancerSecurityGroup2DA3E8D6": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB importedenvironmentintegServiceloadbalancerFAE8A5FA",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Fn::GetAtt": [
      "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
      "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcDC34D4D3Ref"
     ]
    }
   }
  },
  "ServiceloadbalancerSecurityGrouptoimportedenvironmentintegServiceserviceSecurityGroup2BE90F7480B17EB7CA": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "ServiceloadbalancerSecurityGroup2DA3E8D6",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "ServiceserviceSecurityGroup1915660F",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   }
  },
  "ServiceloadbalancerServicelistenerC862F722": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "ServiceloadbalancerServicelistenerServiceGroup844B51E6"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "ServiceloadbalancerD5D60894"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "ServiceloadbalancerServicelistenerServiceGroup844B51E6": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "deregistration_delay.timeout_seconds",
      "Value": "10"
     },
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Fn::GetAtt": [
      "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
      "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcDC34D4D3Ref"
     ]
    }
   }
  },
  "ServicetaskdefinitionTaskRole5B4B60A4": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "Servicetaskdefinition0CEAD834": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Cpu": 256,
      "Environment": [
       {
        "Name": "PORT",
        "Value": "80"
       }
      ],
      "Essential": true,
      "Image": "nathanpeck/name",
      "Memory": 512,
      "Name": "app",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ],
      "Ulimits": [
       {
        "HardLimit": 1024000,
        "Name": "nofile",
        "SoftLimit": 1024000
       }
      ]
     }
    ],
    "Cpu": "256",
    "Family": "importedenvironmentintegServicetaskdefinition63936B87",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "EC2",
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ServicetaskdefinitionTaskRole5B4B60A4",
      "Arn"
     ]
    }
   }
  },
  "ServiceserviceService6A153CB8": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Fn::GetAtt": [
      "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
      "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentcluster594A3DCARef"
     ]
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 100
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "app",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "ServiceloadbalancerServicelistenerServiceGroup844B51E6"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "ServiceserviceSecurityGroup1915660F",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Fn::GetAtt": [
         "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
         "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcPrivateSubnet1Subnet7309E967Ref"
        ]
       },
       {
        "Fn::GetAtt": [
         "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
         "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcPrivateSubnet2Subnet55014443Ref"
        ]
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "Servicetaskdefinition0CEAD834"
    }
   },
   "DependsOn": [
    "ServiceloadbalancerServicelistenerC862F722",
    "ServiceloadbalancerServicelistenerServiceGroup844B51E6"
   ]
  },
  "ServiceserviceSecurityGroup1915660F": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "imported-environment-integ/Service-service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Fn::GetAtt": [
      "ResourcesNestedStackResourcesNestedStackResourceCDA26E60",
      "Outputs.importedenvironmentintegResourcesEnvironmentenvironmentvpcDC34D4D3Ref"
     ]
    }
   }
  },
  "ServiceserviceSecurityGroupfromimportedenvironmentintegServiceloadbalancerSecurityGroup68EE533C8070FCF629": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "ServiceserviceSecurityGroup1915660F",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "ServiceloadbalancerSecurityGroup2DA3E8D6",
      "GroupId"
     ]
    },
    "ToPort": 80
   }
  }
 },
 "Outputs": {
  "Serviceloadbalancerdnsoutput": {
   "Value": {
    "Fn::GetAtt": [
     "ServiceloadbalancerD5D60894",
     "DNSName"
    ]
   }
  }
 },
 "Parameters": {
  "AssetParameters78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01S3Bucket64585C1B": {
   "Type": "String",
   "Description": "S3 bucket for asset \"78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01\""
  },
  "AssetParameters78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01S3VersionKey41670582": {
   "Type": "String",
   "Description": "S3 key for asset version \"78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01\""
  },
  "AssetParameters78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01ArtifactHashF1155D65": {
   "Type": "String",
   "Description": "Artifact hash for asset \"78cd13b88474241c9844c0c939b6fca0f485ffbba32f35718002319e7ab73a01\""
  }
 }
}
