packages/@aws-cdk-containers/ecs-service-extensions/test/imported-environment.integ.snapshot/importedenvironmentintegResourcesAB23EBEF.nested.template.json
{
 "Resources": {
  "Environmentenvironmentvpc02635CAD": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet1Subnet90FA3050": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet1RouteTableF562A242": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet1RouteTableAssociationFDE85030": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet1RouteTableF562A242"
    },
    "SubnetId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet1Subnet90FA3050"
    }
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet1DefaultRoute4171CB3F": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet1RouteTableF562A242"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EnvironmentenvironmentvpcIGWD3352EF8"
    }
   },
   "DependsOn": [
    "EnvironmentenvironmentvpcVPCGWD59F3C86"
   ]
  },
  "EnvironmentenvironmentvpcPublicSubnet1EIP0B5752AE": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet1NATGateway65E8E64D": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet1Subnet90FA3050"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "EnvironmentenvironmentvpcPublicSubnet1EIP0B5752AE",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet1"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet2Subnet80565813": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet2RouteTableCC311A3A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet2RouteTableAssociation54B3A48A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet2RouteTableCC311A3A"
    },
    "SubnetId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet2Subnet80565813"
    }
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet2DefaultRouteCA3995A5": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet2RouteTableCC311A3A"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "EnvironmentenvironmentvpcIGWD3352EF8"
    }
   },
   "DependsOn": [
    "EnvironmentenvironmentvpcVPCGWD59F3C86"
   ]
  },
  "EnvironmentenvironmentvpcPublicSubnet2EIP54A162E2": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPublicSubnet2NATGatewayEDDF81A3": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet2Subnet80565813"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "EnvironmentenvironmentvpcPublicSubnet2EIP54A162E2",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PublicSubnet2"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet1SubnetE66B59C1": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet1RouteTable2FAF7412": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PrivateSubnet1"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet1RouteTableAssociation46A426C7": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPrivateSubnet1RouteTable2FAF7412"
    },
    "SubnetId": {
     "Ref": "EnvironmentenvironmentvpcPrivateSubnet1SubnetE66B59C1"
    }
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet1DefaultRoute1AFA55BA": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPrivateSubnet1RouteTable2FAF7412"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet1NATGateway65E8E64D"
    }
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet2SubnetD38DAD67": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet2RouteTable244FED3F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc/PrivateSubnet2"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet2RouteTableAssociation9FE6BFCD": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPrivateSubnet2RouteTable244FED3F"
    },
    "SubnetId": {
     "Ref": "EnvironmentenvironmentvpcPrivateSubnet2SubnetD38DAD67"
    }
   }
  },
  "EnvironmentenvironmentvpcPrivateSubnet2DefaultRouteF5A23DA3": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "EnvironmentenvironmentvpcPrivateSubnet2RouteTable244FED3F"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "EnvironmentenvironmentvpcPublicSubnet2NATGatewayEDDF81A3"
    }
   }
  },
  "EnvironmentenvironmentvpcIGWD3352EF8": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "imported-environment-integ/Resources/Environment-environment-vpc"
     }
    ]
   }
  },
  "EnvironmentenvironmentvpcVPCGWD59F3C86": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "Environmentenvironmentvpc02635CAD"
    },
    "InternetGatewayId": {
     "Ref": "EnvironmentenvironmentvpcIGWD3352EF8"
    }
   }
  },
  "EnvironmentenvironmentclusterA67A8E69": {
   "Type": "AWS::ECS::Cluster"
  }
 },
 "Outputs": {
  "importedenvironmentintegResourcesEnvironmentenvironmentvpcPublicSubnet1Subnet0D15D382Ref": {
   "Value": {
    "Ref": "EnvironmentenvironmentvpcPublicSubnet1Subnet90FA3050"
   }
  },
  "importedenvironmentintegResourcesEnvironmentenvironmentvpcPublicSubnet2Subnet68645ACARef": {
   "Value": {
    "Ref": "EnvironmentenvironmentvpcPublicSubnet2Subnet80565813"
   }
  },
  "importedenvironmentintegResourcesEnvironmentenvironmentvpcDC34D4D3Ref": {
   "Value": {
    "Ref": "Environmentenvironmentvpc02635CAD"
   }
  },
  "importedenvironmentintegResourcesEnvironmentenvironmentcluster594A3DCARef": {
   "Value": {
    "Ref": "EnvironmentenvironmentclusterA67A8E69"
   }
  },
  "importedenvironmentintegResourcesEnvironmentenvironmentvpcPrivateSubnet1Subnet7309E967Ref": {
   "Value": {
    "Ref": "EnvironmentenvironmentvpcPrivateSubnet1SubnetE66B59C1"
   }
  },
  "importedenvironmentintegResourcesEnvironmentenvironmentvpcPrivateSubnet2Subnet55014443Ref": {
   "Value": {
    "Ref": "EnvironmentenvironmentvpcPrivateSubnet2SubnetD38DAD67"
   }
  }
 }
}
